objects/AR_Obj200__c.object
<CustomObject>
    <fields>
        <fullName>EmailField__c</fullName>
        <label>EmailField</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <label>Field4</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PicklistField1__c</fullName>
        <label>PicklistField1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AR-Obj200</label>
    <nameField>
        <label>AR-Obj200 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-Obj200s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>